[workspace]
resolver = "2"
members = [
  "constants",
  "libsql",
  "libsql_rusqlite",
  "rusqlite",
  "rusqlite_mutex",
  "rusqlite_tl",
  "rusqlite_tl2",
  "tokio_rusqlite",
]
default-members = [
  "libsql",
  "libsql_rusqlite",
  "rusqlite",
  "rusqlite_mutex",
  "rusqlite_tl",
  "rusqlite_tl2",
  "tokio_rusqlite",
]
