[workspace]
resolver = "2"
members = [
  "constants",
  "libsql",
  "libsql_rusqlite",
  "r2d2",
  "rusqlite",
  "rusqlite_mutex",
  "rusqlite_tl",
  "rusqlite_tl2",
  "rusqlite_tl3",
  "tokio_rusqlite",
  "trailbase_sqlite",
  "vendor/tokio-rusqlite",
  "vendor/trailbase-sqlite",
]
default-members = [
  "libsql",
  "libsql_rusqlite",
  "r2d2",
  "rusqlite",
  "rusqlite_mutex",
  "rusqlite_tl",
  "rusqlite_tl2",
  "rusqlite_tl3",
  "trailbase_sqlite",
  "tokio_rusqlite",
]
